# ai-conversation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
apps/conversation-tester/: director.py  judge.py  live_debate.py  presets.py  record_conversation.py  record_text.py
apps/tts-bench/: README.md  RUNBOOK.md  accent_check.py  judge.py  metrics.py  report.py  run_bench.py  test_sentences.py
apps/tts-bench/engines/: __init__.py  base.py  elevenlabs.py  espnet.py  kokoro.py  voicevox.py
apps/voice-agent/: .env.example  Dockerfile  README.md  aivis_tts.py  bot.py  pcc-deploy.toml  persona.py  processors.py  pyproject.toml  requirements.txt  run_interlocutor.py  run_live_local.py
apps/web/: index.html
data/accent_dict/: README.md  project_words.csv
docs/: README.md
docs/adr/: 0000-template.md  0001-cascaded-orchestration-architecture.md  0002-ports-and-adapters.md  0003-pipecat-cloud-pipeline.md  README.md
docs/architecture/: README.md  cheatsheet.md
docs/design/: README.md  ai-conversation.md  conversation-tester.md  japanese-tts-optimization.md
src/aiconv/: __init__.py
src/aiconv/adapters/: __init__.py  filler.py  llm_claude.py  mock.py  stt_deepgram.py  transport_pipecat.py  transport_wav.py  tts_aivis.py  tts_elevenlabs.py  tts_espnet.py  tts_voicevox.py  turn.py  turn_fusion.py
src/aiconv/adapters/_engines/: __init__.py  espnet_engine.py  resample.py  voicevox_engine.py
src/aiconv/core/: __init__.py  endpointing.py  events.py  metrics.py  orchestrator.py  ports.py
src/aiconv/frontend/: __init__.py  accent.py  dict_sync.py  text_normalize.py
src/aiconv/poc/: __init__.py  render_fillers.py  run_loop.py  run_real.py
tests/: test_aivis_tts.py  test_bargein.py  test_endpointing.py  test_events.py  test_filler.py  test_orchestrator.py  test_real_adapters.py  test_tts_adapters.py  test_tts_bench.py  test_tts_frontend.py  test_turn_fusion.py
