[project]
name = "aiconv"
version = "0.0.0"
description = "生成音声AI対話 — ベンダー非依存の対話オーケストレーション層 (ports & adapters)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

# 実プロバイダ／トランスポートは optional extras。PoC (mock) はオフラインで動く。
[project.optional-dependencies]
providers = [
    "anthropic>=0.40",
    "elevenlabs>=1.0",
    "deepgram-sdk>=3.0",
]
transport = [
    "pipecat-ai>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiconv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["aiconv"]
mypy_path = "src"

# 実プロバイダ SDK は optional extras。未導入環境でも型チェックが通るようにする。
[[tool.mypy.overrides]]
module = ["anthropic.*", "elevenlabs.*", "deepgram.*"]
ignore_missing_imports = true
