[project]
name = "ai-conversation-voice"
version = "0.1.0"
description = "日本語キャラクター対話ボイスエージェント (Pipecat Cloud / Daily)"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[anthropic,daily,deepgram,elevenlabs,runner,silero]",
    "pipecatcloud",
    "python-dotenv",
]

[dependency-groups]
dev = ["ruff>=0.12"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I", "UP"]
